crates/hl7v2-parser/tests/snapshots/snapshot_tests__no_msh_error.snap
---
source: crates/hl7v2-parser/tests/snapshot_tests.rs
expression: result
---
Err(
    InvalidSegmentId,
)
