crates/hl7v2-parser/tests/snapshots/snapshot_tests__real_world_oru.snap
---
source: crates/hl7v2-parser/tests/snapshot_tests.rs
expression: message
---
delims:
  field: "|"
  comp: ^
  rep: "~"
  esc: "\\"
  sub: "&"
segments:
  - id:
      - 77
      - 83
      - 72
    fields:
      - reps:
          - comps:
              - subs:
                  - Text: "^~\\&"
      - reps:
          - comps:
              - subs:
                  - Text: LAB
      - reps:
          - comps:
              - subs:
                  - Text: GOOD_HEALTH_HOSPITAL
      - reps:
          - comps:
              - subs:
                  - Text: HIS
      - reps:
          - comps:
              - subs:
                  - Text: GOOD_HEALTH_HOSPITAL
      - reps:
          - comps:
              - subs:
                  - Text: "20250128150000"
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ORU
              - subs:
                  - Text: R01
      - reps:
          - comps:
              - subs:
                  - Text: LAB00001
      - reps:
          - comps:
              - subs:
                  - Text: P
      - reps:
          - comps:
              - subs:
                  - Text: 2.5.1
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ASCII
  - id:
      - 80
      - 73
      - 68
    fields:
      - reps:
          - comps:
              - subs:
                  - Text: "1"
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: PATID5421
              - subs:
                  - Text: ""
              - subs:
                  - Text: ""
              - subs:
                  - Text: GOOD_HEALTH_HOSPITAL
              - subs:
                  - Text: MR
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: TEST
              - subs:
                  - Text: PATIENT
              - subs:
                  - Text: A
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "19550505"
      - reps:
          - comps:
              - subs:
                  - Text: M
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: C
      - reps:
          - comps:
              - subs:
                  - Text: 12345 MAIN ST
              - subs:
                  - Text: ""
              - subs:
                  - Text: NEW YORK
              - subs:
                  - Text: NY
              - subs:
                  - Text: "10001"
              - subs:
                  - Text: USA
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: (212)555-1212
  - id:
      - 79
      - 66
      - 82
    fields:
      - reps:
          - comps:
              - subs:
                  - Text: "1"
      - reps:
          - comps:
              - subs:
                  - Text: ORDER0001
      - reps:
          - comps:
              - subs:
                  - Text: RESULT0001
      - reps:
          - comps:
              - subs:
                  - Text: CBC
              - subs:
                  - Text: COMPLETE BLOOD COUNT
              - subs:
                  - Text: L
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "20250128120000"
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: F
  - id:
      - 79
      - 66
      - 88
    fields:
      - reps:
          - comps:
              - subs:
                  - Text: "1"
      - reps:
          - comps:
              - subs:
                  - Text: NM
      - reps:
          - comps:
              - subs:
                  - Text: WBC
              - subs:
                  - Text: WHITE BLOOD COUNT
              - subs:
                  - Text: L
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "7.5"
      - reps:
          - comps:
              - subs:
                  - Text: 10*9/L
      - reps:
          - comps:
              - subs:
                  - Text: 4.0-11.0
      - reps:
          - comps:
              - subs:
                  - Text: N
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: F
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "20250128150000"
  - id:
      - 79
      - 66
      - 88
    fields:
      - reps:
          - comps:
              - subs:
                  - Text: "2"
      - reps:
          - comps:
              - subs:
                  - Text: NM
      - reps:
          - comps:
              - subs:
                  - Text: RBC
              - subs:
                  - Text: RED BLOOD COUNT
              - subs:
                  - Text: L
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "4.5"
      - reps:
          - comps:
              - subs:
                  - Text: 10*12/L
      - reps:
          - comps:
              - subs:
                  - Text: 4.0-5.5
      - reps:
          - comps:
              - subs:
                  - Text: N
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: F
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "20250128150000"
charsets: []
