crates/hl7v2-parser/tests/snapshots/snapshot_tests__standard_delimiters.snap
---
source: crates/hl7v2-parser/tests/snapshot_tests.rs
expression: delims
---
field: "|"
comp: ^
rep: "~"
esc: "\\"
sub: "&"
