crates/hl7v2-parser/tests/snapshots/snapshot_tests__truncated_error.snap
---
source: crates/hl7v2-parser/tests/snapshot_tests.rs
expression: result
---
Ok(
    Message {
        delims: Delims {
            field: '|',
            comp: '^',
            rep: '~',
            esc: '\\',
            sub: '&',
        },
        segments: [
            Segment {
                id: [
                    77,
                    83,
                    72,
                ],
                fields: [
                    Field {
                        reps: [
                            Rep {
                                comps: [
                                    Comp {
                                        subs: [
                                            Text(
                                                "^~\\&",
                                            ),
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                    Field {
                        reps: [
                            Rep {
                                comps: [
                                    Comp {
                                        subs: [
                                            Text(
                                                "App",
                                            ),
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                    Field {
                        reps: [
                            Rep {
                                comps: [
                                    Comp {
                                        subs: [
                                            Text(
                                                "Fac",
                                            ),
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
        charsets: [],
    },
)
